--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/InfoBlockStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/InfoBlockStyles.xaml
@@ -31,6 +31,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <Setter Property="FontSize" Value="{StaticResource DefaultFontSize}" />
         <Setter Property="Foreground" Value="{StaticResource FontPrimaryBrush}" />
         <Setter Property="Background" Value="{StaticResource PrimaryLightBrush}" />
+        <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="BorderBrush" Value="{StaticResource BorderBrush}" />
         <Setter Property="IsTabStop" Value="False" />
 
         <Setter Property="Template">
