--- a/sources/VeloCity.Installer/Product.wxs
+++ b/sources/VeloCity.Installer/Product.wxs
@@ -24,7 +24,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         Id="*"
         Name="Velo City"
         Language="1033"
-        Version="1.0.0.0"
+        Version="$(var.Version)"
         Manufacturer="Dust in the Wind"
         UpgradeCode="ecb19ba8-d443-4ac2-ae3e-46e9e6bab11b">
 
