--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/PropertyGroupsViewStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/PropertyGroupsViewStyles.xaml
@@ -30,6 +30,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
     <Style TargetType="{x:Type styles:PropertyGroupsView}">
         <Setter Property="SnapsToDevicePixels" Value="True" />
+        <Setter Property="IsTabStop" Value="False"/>
 
         <Setter Property="Template">
             <Setter.Value>
