--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/InfoBlockStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/InfoBlockStyles.xaml
@@ -57,7 +57,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                                 Style="{StaticResource InfoIconStyle}"
                                 Width="16"
                                 Height="16"
-                                VerticalAlignment="Top" />
+                                VerticalAlignment="Top"
+                                IsTabStop="False"/>
 
                             <ContentPresenter
                                 Grid.Column="1"
